# specklesnake

./: CHANGELOG.md  LICENSE  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: style_checks.yml  unit_test.yml
examples/: Getting_Started.ipynb
specklesnake/data/: hc_speckle.tif
specklesnake/model/: base_image_interpolator.py  bicubic_image_interpolator.py  bilinear.py  spline.py
specklesnake/model/tests/: test_bicubic_image_interpolator.py  test_bilinear.py  test_spline.py
specklesnake/util/: minimand.py  spline_basis.py  spline_knot.py
specklesnake/util/tests/: test_minimand.py  test_spline_basis.py  test_spline_knot.py
