# Documentation for the contents of this file can be found here:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = specklesnake
version = 0.0.1
description = Extensible 2D Digital Image Correlation
url = https://github.com/stpotter16/specklesnake
author = Sam Potter
license = MIT